--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/material.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="js/lib/angular.js"></script>
     <script src="js/lib/angular-ui-router.min.js"></script>
