--- a/www/index.html
+++ b/www/index.html
@@ -26,11 +26,13 @@
 
     <div class="view-wrapper" ui-view="">
     </div>
+    <div ui-view="generatedForm"></div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/configRoutes.js"></script>
     <script src="js/dbservice.js"></script>
     <script src="js/builderCtrl.js"></script>
+    <script src="js/viewerCtrl.js"></script>
     <script src="js/lib/materialize.min.js"></script>
     <script src="js/lib/material.min.js"></script>
 </body>
