ui routes working as intended

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -25,8 +25,10 @@
     <div ng-include="'views/header.html'"></div>
 
     <div class="view-wrapper" ui-view="">
+        <!-- <div ui-view="formbuilder"></div>
+        <div ui-view="formviewernested"></div> -->
     </div>
-    <div ui-view="generatedForm"></div>
+    <!-- <div ui-view="generatedForm"></div> -->
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script src="js/configRoutes.js"></script>
